# speeker

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
etc/: com.speeker.player.plist  com.speeker.server.plist
mcp/: pyproject.toml  run.sh  server.py
scripts/: install-launchd.sh  uninstall-launchd.sh
src/pytone/: __init__.py  parser.py  synthesis.py
src/speeker/: __init__.py  cli.py  config.py  default-voice-prefs.json  migrate.py  paths.py  player.py  preprocessing.py  queue_db.py  server.py  summarize.py  voice_clone.py  voice_prefs.py  voices.py  web.py
tests/: test_cli.py  test_config.py  test_integration.py  test_migrate.py  test_paths.py  test_player.py  test_preprocessing.py  test_preprocessing_stt.py  test_queue_db.py  test_server.py  test_summarize.py  test_voice_clone.py  test_voice_clone_roundtrip.py  test_voice_prefs.py  test_voices.py  test_web.py
