[project]
name = "speeker"
version = "1.5.0"
description = "Text-to-speech CLI with multiple engines and voice options"
requires-python = ">=3.11"
dependencies = [
    "pocket-tts>=0.1.0",
    "kokoro>=0.1.0",
    "scipy",
    "numpy",
    "torch>=2.5",
    "fastapi",
    "uvicorn",
    "tones>=1.2.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
test = [
    "faster-whisper>=1.2.1",
]
semantic = [
    "sentence-transformers>=2.2.0",
]
clone = [
    "yt-dlp>=2024.0.0",
]

[project.scripts]
speeker = "speeker.cli:main"
speeker-player = "speeker.player:main"
speeker-server = "speeker.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speeker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]
